[package]
name = "polkadot-p2p-client"
version = "0.1.0"
edition = "2024"

[dependencies]
snow = { version = "0.10.0", default-features = false, features = ["default-resolver", "use-curve25519", "use-chacha20poly1305", "use-sha2"] }
thiserror = { version = "2.0.18", default-features = false }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }