[package]
name = "warp-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
polkadot-p2p-connect = { path = "../.." }
tokio = { version = "1", features = ["full"] }
parity-scale-codec = { version = "3", features = ["derive"] }
blake2 = "0.10"
hex = "0.4"
hex-literal = "0.4"
rand = "0.8"
anyhow = "1"
ed25519-dalek = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
