[package]
name = "p2p-client-web-example"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
polkadot-p2p-connector = { path = "../../" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket", "BinaryType", "MessageEvent",
    "Window", "Crypto", "Document", "Element",
    "console",
] }
parity-scale-codec = { version = "3" }
blake2 = "0.10"
hex = "0.4"
